<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left|center_vertical"
        android:text="@string/minigame_select"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/production_dates"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/production_dates" />

    <Button
        android:id="@+id/analog_vs_digital"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/production_dates"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/analog_vs_digital" />

    <Button
        android:id="@+id/polyphony"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/analog_vs_digital"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/polyphony" />

    <Button
        android:id="@+id/mixed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/polyphony"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/mixed" />
    
</RelativeLayout>