<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/logo"
        android:layout_alignTop="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/logo"
        android:gravity="left|center_vertical"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <Button
        android:id="@+id/play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/stats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats" />

    <Button
        android:id="@+id/minigames"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stats"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/minigames" />

    <Button
        android:id="@+id/about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minigames"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/about" />
    
</RelativeLayout>